<resources>
    <string name="app_name">BotApp</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="prompt_message">Enter your message and send.</string>
    <string name="action_sign_in">Sign In</string>
    <string name="go_sign_in">Go Back To Sign In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_blank">BlankActivity</string>
    <string name="login_email">Enter Email-ID</string>
    <string name="menu_logout">Logout</string>
</resources>
